--- a/index.qmd
+++ b/index.qmd
@@ -21,8 +21,6 @@ filters:
 
 ### Research Questions
 
-1. How do changes in the Nomilo fishpond over time correlate with 
-
 ::: {.callout-note title="Interactive Code"}
 Throughout this document, hover over the numbered annotations to the right of code chunks to reveal detailed explanations and comments about the code. Where drop-down *italicized* text is present, expand by pressing
 on arrow to see code.
@@ -34,7 +32,8 @@ on arrow to see code.
 #| label: install-packages
 packages <- c("rio", "tidyverse", "janitor", "lubridate", "rmarkdown", "fs", 
               "hms", "zoo", "corrplot", "kableExtra", "psych", "ggplot2", "shiny", 
-              "rsconnect", "packrat", "shinylive")
+              "rsconnect", "packrat", "shinylive", "shinycssloaders", "pak", 
+              "plotly", "here")
 
 
 for (pkg in packages) {
@@ -63,7 +62,12 @@ library(ggplot2)
 library(shiny)
 library(rsconnect)
 library(packrat)
+library(pak)
 library(shinylive)
+library(shinycssloaders)
+library(stringr)
+library(plotly)
+library(here)
 ```
 
 1. For importing excel data
@@ -80,12 +84,20 @@ library(shinylive)
 Define vector of files to import: 
 
 ```{r}
-#| label: create-vector-file-paths
-files_to_import <- dir_ls(path = "data/raw") # <1>
+create_vector_file_paths <- function(directory_path) {
+  # List all files in the given directory path
+  files_to_import <- fs::dir_ls(path = directory_path)
+  
+  # Loop through the files and print each with an index
+  for (i in seq_along(files_to_import)) {
+    cat(i, "= ", files_to_import[i], "\n")
+  }
+  
+  # Return the vector of file paths
+  return(files_to_import)
+}
 
-for (i in seq_along(files_to_import)) { # <2>
-  cat(i, "= ", files_to_import[i], "\n") # <2>
-} # <2>
+files_to_import <- create_vector_file_paths("data/raw")
 ```
 
 1. Store the file paths of our raw data within the `data/raw` directory in `files_to_import`
@@ -644,151 +656,186 @@ Export merged final data set into `data/outputs` folder.
 ## Exploratory Data Analysis
 
 ```{r}
-#| code-fold: true
-#| code-summary: Helper Functions
+#| eval: false
+#| echo: false
+pak::pak("posit-dev/r-shinylive")
+```
 
-load_datasets <- function(path, date_pattern) {
-  # List all files in the directory
-  all_files <- dir_ls(path)
-  
-  # Filter files by the specified date pattern
-  filtered_files <- all_files[grepl(date_pattern, all_files)]
-  
-  # Read each filtered file into a list of data frames
-  datasets <- map(filtered_files, read_csv)
-  
-  # Optional: Assign names to the list elements based on file names
-  names(datasets) <- str_replace_all(basename(filtered_files), pattern = "\\.csv$", replacement = "")
-  
-  datasets
-}
+```{bash}
+#| eval: false
+#| echo: false
+# quarto add quarto-ext/shinylive
+# quarto preview index.qmd --no-browser --no-watch-inputs
+```
 
-# Helper function to convert variable names to title case with spaces
-make_title_case <- function(variable_name) {
-  str_to_title(str_replace_all(variable_name, pattern = "_", replacement = " "))
-}
-
-# Define the function for generating the plot
-generate_profile_changes_lineplot <- function(df, y_var, y_var_title, y_min, y_max) {
-  ggplot(df, aes(x = date, y = !!rlang::sym(y_var), color = as.factor(depth))) +
-    geom_point(size = 1.5, alpha = 0.8) +
-    geom_line(linewidth = 1, alpha = 0.6) +
-    facet_wrap(~ location, scales = "free_y") +
-    theme_minimal() +
-    labs(color = "Depth", x = "Month", y = y_var_title,
-         title = paste(y_var_title, "Over Time by Location and Depth")) +
-    scale_color_viridis_d() +
-    theme(axis.text.x = element_text(angle = 45, vjust = 0.5, hjust = 1),
-          axis.title.x = element_text(margin = margin(t = 10), face = "bold"),
-          axis.title.y = element_text(face = "bold"),
-          plot.title = element_text(hjust = 0.5, face = "bold", size = 20),
-          legend.title = element_text(face = "bold")) +
-    ylim(as.numeric(y_min), as.numeric(y_max))
-}
+```{r}
+#| eval: false
+#| echo: false
+# shinylive::export(
+#   appdir = "code",
+#   destdir = "docs"
+# )
+# 
+# httpuv::runStaticServer(
+#   dir = "docs",
+#   port = 8888
+# )
 ```
 
 ```{r}
 #| code-fold: true
-#| code-summary: Load Tidied Datasets
-tidied_datasets <- load_datasets("data/tidied", "03-15")
+#| code-summary: Helper Functions
+#| echo: false
+#| eval: false
 ```
 
 ```{shinylive-r}
 #| standalone: true 
-#| viewerHeight: 700
+#| layout: vertical
+#| viewerHeight: 850
 
-# Shiny UI definition
-ui <- fluidPage(
-  titlePanel(
-    "Nomilo Fishpond Biogeochemical Changes Over Time", 
-    windowTitle = "Nomilo Fishpond Biogeochemical Changes Over Time",
-    tags$style(HTML(".title {font-weight: bold; text-align: center;}")
-    )
-  ),
-  sidebarLayout(
-    sidebarPanel(
-      selectInput("dataset", "Choose Dataset:",
-                  choices = c("Water Samples" = "water_samples_data_tidied",
-                              "Profiles" = "profiles_data_tidied")),
-      uiOutput("y_var_ui"),
-      numericInput("y_min", "Y-axis Minimum:", value = 0),
-      numericInput("y_max", "Y-axis Maximum:", value = 100)
-    ),
-    mainPanel(
-      plotOutput("lineplot")
-    )
-  )
+library(shiny)
+library(readr)
+library(ggplot2)
+library(plotly)
+library(dplyr)
+library(DT)
+
+# Preload data
+dfs <- list(
+  "Water Samples" = readr::read_csv("https://raw.githubusercontent.com/Lysbethk/nomilo-fishpond-analysis/main/data/output/2024-03-15_water-samples-data-tidied.csv"),
+  "Profiles" = readr::read_csv("https://raw.githubusercontent.com/Lysbethk/nomilo-fishpond-analysis/main/data/output/2024-03-15_profiles-data-tidied.csv")
 )
 
-# Server logic for the Shiny app
+# Helper function to convert variable names to title case with spaces
+make_title_case <- function(variable_name) {
+  stringr::str_to_title(stringr::str_replace_all(variable_name, pattern = "_", replacement = " "))
+}
+
+ui <- fluidPage(
+  tags$head(
+    tags$style(HTML("
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+      body { color: #505050; font-family: 'Roboto', sans-serif; padding-left: 20px; padding-right: 20px;}
+      h2 { font-family: 'Roboto', sans-serif; color: #black;}
+      .main-title { text-align: center; font-size: 30px; font-weight: bold; margin-bottom: 20px; }
+    "))
+  ),
+  titlePanel(div("Exploring Depth-wise Biogeochemical Variations Across Nomilo Fishpond Locations Over Time", class = "main-title")),
+  fluidRow(
+    column(width = 3, offset = 3, selectInput("dataset", "Choose Dataset:", choices = c("Select a Dataset" = "", names(dfs)))),
+    column(width = 3, uiOutput("y_var_ui"))
+  ),
+  fluidRow(
+    column(width = 3, offset = 3, numericInput("y_min", "Y-axis Minimum:", value = 0)),
+    column(width = 3, numericInput("y_max", "Y-axis Maximum:", value = 100))
+  ),
+  fluidRow(
+    column(width = 3, offset = 5, actionButton("generate", "Generate"))
+  ),
+  uiOutput("plot_ui")
+)
+
 server <- function(input, output, session) {
   output$y_var_ui <- renderUI({
-    df <- get(input$dataset, envir = .GlobalEnv)
-    num_vars <- df %>%
-      select_if(is.numeric) %>%
-      names()
-    
-    selectInput("y_var", "Choose Y Variable:", choices = num_vars)
+    if(input$dataset != ""){
+      df <- dfs[[input$dataset]]
+      num_vars <- names(which(sapply(df, is.numeric)))
+      selectInput("y_var", "Choose Y Variable:", choices = c("Select a Y Variable" = "", num_vars))
+    } else {
+      selectInput("y_var", "Choose Y Variable:", choices = c("Select a Y Variable" = ""))
+    }
   })
   
-  output$lineplot <- renderPlot({
-    req(input$dataset)
-    df <- get(input$dataset, envir = .GlobalEnv)
+  output$plot_ui <- renderUI({
+    if(input$dataset == "" || input$y_var == "" || input$y_var == "Select a Y Variable"){
+      return(h4("Please select a dataset and y variable to view the dataset and generate plots.", style = "color: red; text-align: center;"))
+    } else {
+      tabsetPanel(
+        tabPanel("Data Table", DTOutput("table")),
+        tabPanel("Static Plot", plotOutput("staticplot")),
+        tabPanel("Interactive Plot", plotlyOutput("interactiveplot")),
+        selected = "Data Table"
+      )
+    }
+  })
+  
+  observeEvent(input$generate, {
+    # Require that both a dataset and a Y variable have been selected
+    req(input$dataset, input$y_var != "")
     
-    formatted_title <- make_title_case(input$y_var)
-    
-    generate_profile_changes_lineplot(df, input$y_var, formatted_title, input$y_min, input$y_max)
+    withProgress(message = 'Generating plots...', value = 0, {
+      for(i in 1:10) {
+        incProgress(0.1)
+        Sys.sleep(0.1) # Simulate some processing time
+      }
+      
+      # Generate data table
+      output$table <- renderDT({
+        datatable(dfs[[input$dataset]], options = list(pageLength = 10, autoWidth = TRUE))
+      })
+      
+      # Generate static plot
+      output$staticplot <- renderPlot({
+        df <- dfs[[input$dataset]]
+        df$depth <- as.factor(df$depth)
+        p <- ggplot(df, aes(x = date, y = !!rlang::sym(input$y_var), color = depth)) +
+          geom_point(size = 2.75, alpha = 0.8) +
+          geom_line(linewidth = 2, alpha = 0.6) +
+          facet_wrap(~ location) +
+          labs(color = "Depth", x = "Month", y = make_title_case(input$y_var)) +
+          scale_color_viridis_d() +
+          theme_minimal() +
+          theme(
+            axis.text.x = element_text(angle = 45, vjust = 0.5, hjust = 1, size = 14),
+            axis.text.y = element_text(margin = margin(r = 10), size = 14),
+            axis.title.x = element_text(margin = margin(t = 20), face = "bold", size = 18),
+            axis.title.y = element_text(face = "bold", margin = margin(r = 5), size = 18),
+            plot.title = element_text(hjust = 0.5, face = "bold", size = 22),
+            legend.position = "bottom",
+            legend.title = element_text(face = "bold", size = 14),
+            legend.text = element_text(size = 14),
+            strip.text = element_text(size = 16),
+            plot.margin = margin(20, 20, 20, 20),
+            panel.spacing = unit(1.5, "lines")
+          ) +
+          guides(color = guide_legend(override.aes = list(size=4))) +
+          ylim(input$y_min, input$y_max)
+        p
+      })
+      
+      # Generate interactive plot
+      output$interactiveplot <- renderPlotly({
+        df <- dfs[[input$dataset]]
+        df$depth <- as.factor(df$depth)
+        p <- ggplot(df, aes(x = date, y = !!rlang::sym(input$y_var), color = depth)) +
+          geom_point(size = 1.5, alpha = 0.8) +
+          geom_line(linewidth = 1, alpha = 0.6) +
+          facet_wrap(~ location) +
+          labs(color = "Depth", x = "Month", y = make_title_case(input$y_var)) +
+          scale_color_viridis_d() +
+          theme_minimal() +
+          theme(
+            axis.text.x = element_text(angle = 45, vjust = 0.5, hjust = 1),
+            axis.title.x = element_text(margin = margin(t = 10), face = "bold", size = 12),
+            axis.title.y = element_text(face = "bold", margin = margin(l = 15), size = 12),
+            plot.title = element_text(hjust = 0.5, face = "bold"),
+            legend.position = "bottom",
+            legend.title = element_text(face = "bold", size = 10),
+            legend.text = element_text(size = 10),
+            strip.text = element_text(size = 12),
+            plot.margin = margin(20, 20, 20, 20)
+          ) +
+          ylim(input$y_min, input$y_max)
+        ggplotly(p, tooltip = c("text", "y")) %>% 
+          layout(legend = list(orientation = 'h', x = 0.5, xanchor = 'center', y = -0.5))
+      })
+    })
   })
 }
 
 shinyApp(ui, server)
-
-# ui <- fluidPage(
-#   titlePanel("Exploring Depth-wise Biogeochemical Variations Across Nomilo Fishpond Locations Over Time"),
-#   sidebarLayout(
-#     sidebarPanel(
-#       # Dataset selection based on names from tidied_datasets
-#       selectInput("dataset", "Choose Dataset:",
-#                   choices = c("Select Dataset" = "") + names(tidied_datasets)),
-#       uiOutput("y_var_ui"),
-#       numericInput("y_min", "Y-axis Minimum:", value = 0),
-#       numericInput("y_max", "Y-axis Maximum:", value = 100)
-#     ),
-#     mainPanel(
-#       plotOutput("lineplot")
-#     )
-#   )
-# )
-# 
-# server <- function(input, output, session) {
-#   # Dynamically update Y variable choices based on selected dataset
-#   output$y_var_ui <- renderUI({
-#     # Ensure a dataset has been selected
-#     if (input$dataset != "Select Dataset") {
-#       df <- tidied_datasets[[input$dataset]]
-#       num_vars <- names(select_if(df, is.numeric))
-#       
-#       selectInput("y_var", "Choose Y Variable:",
-#                   choices = c("Select Y Variable" = "") + num_vars)
-#     } else {
-#       selectInput("y_var", "Choose Y Variable:", choices = c("Select Y Variable" = ""))
-#     }
-#   })
-# 
-#   # Generate the plot based on selected inputs
-#   output$lineplot <- renderPlot({
-#     req(input$dataset != "Select Dataset", input$y_var != "Select Y Variable")
-#     
-#     df <- tidied_datasets[[input$dataset]]
-#     formatted_title <- make_title_case(input$y_var)
-#     
-#     generate_profile_changes_lineplot(df, input$y_var, formatted_title, input$y_min, input$y_max)
-#   })
-# }
-# 
-# shinyApp(ui, server)
 ```
-
 
 ## Correlational Analysis
 
